更新JVM内存区域